# move-base-ompl

./: .travis.yml  CMakeLists.txt  README.md  ompl_gp_plugin.xml  package.xml
include/: ompl_global_planner.h
src/: ompl_global_planner.cpp
